tests/custom-2.1.1/noncompliant/eks-cluster-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: eks-cluster-config
  namespace: kyverno-aws
data:
  logging: |
    clusterLogging:
      - types:
          - api
        enabled: true
