tests/custom-2.1.1/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-2.1.1-noncompliant
policies:
  - ../../../kyverno-policies/custom-2.1.1.yaml
resources:
  - configmap.yaml
results:
  - policy: custom-2-1-1-enable-audit-logs
    rule: check-audit-logging
    resources:
      - noncompliant-configmap
    kind: ConfigMap
    result: fail
